--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,12 +1,15 @@
 version: 2
 
 updates:
+# - package-ecosystem: "npm" # Specify the package ecosystem (JavaScript)
 #  - package-ecosystem: "" # See documentation for possible values
 #    directory: "/" # Location of package manifests
 #    schedule:
 #      interval: "weekly"
+#
 #  # Enable version updates for Docker
-  - package-ecosystem: "docker"
+#  - package-ecosystem: "docker" # Specify the package ecosystem (Docker)
+    # Specify the target branch for updates
     target-branch: "dev" # specify the target branch here
     # Look for a `Dockerfile` in the `root` directory
     directory: "/"
@@ -16,6 +19,7 @@ updates:
     commit-message:
       prefix: "update"             # Commit message prefix for updates
 
+# For python projects, uncomment the following section
   # - package-ecosystem: "pip"  # Specify the package ecosystem (Python)
   #   target-branch: "dev" # specify the target branch here
   #   directory: "/"              # Location of the requirements file
