--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
+# This GitHub Actions workflow builds and pushes Docker images for the dev and main branches.
 name: Build Docker, Run Libate
-
+description: Build and push Docker images for dev and main branches
 on:
   push:
     branches:
