--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,9 @@ jobs:
   build-dev:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/dev'  # Only run this job on the dev branch
-
+    env:
+      REPO_NAME: ${{ github.event.repository.name }}  # Get the repository name from the event
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,7 +34,8 @@ jobs:
 
       - name: Build Docker image from dev branch
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:dev .
+          
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:dev .
 
       - name: Build and Push Docker Image for dev
         uses: docker/build-push-action@v4
@@ -40,8 +43,8 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:dev
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:dev
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
 
   build-main:
     runs-on: ubuntu-latest
@@ -63,7 +66,7 @@ jobs:
 
       - name: Build Docker image from main branch
         run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:latest .
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest .
 
       - name: Build and Push Docker Image for main
         uses: docker/build-push-action@v4
@@ -71,6 +74,6 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/${{ vars.REPO_NAME }}:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/${{ github.event.repository.name }}:${{ github.sha }}
 
