--- a/compose.yml
+++ b/compose.yml
@@ -1,9 +1,13 @@
+networks:
+  internal:
+    driver: bridge
 services:
     libation:
         image: mdhmatt/libate:latest
         container_name: libation
         stop_grace_period: 1m
         restart: on-failure
+        ports: "3000:3000"
         volumes:
             - './Books:/config/Books'
             - './data:/config/Libation'
