--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,7 +55,7 @@ jobs:
 
   build-main:
     runs-on: ubuntu-latest
-    needs: build-dev  # Ensure this runs after build-dev
+    #needs: build-dev  # Ensure this runs after build-dev
     if: github.ref == 'refs/heads/main'  # Only run this job on the main branch
 
     steps:
