Remove token from checkout step in workflow
Comment out the token usage in checkout step

--- a/.github/workflows/check-libation-updates.yml
+++ b/.github/workflows/check-libation-updates.yml
@@ -14,8 +14,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          token: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Get latest Libation release
         id: latest-release
